--- a/1-formularz-html5/style.css
+++ b/1-formularz-html5/style.css
@@ -14,7 +14,7 @@ body{
     border-style: dashed; 
 }
 
-label, span.gender{
+label ~ span.gender{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
 }
